--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
 
     <script src="{{rootURL}}assets/vendor.js"></script>
     <script src="{{rootURL}}assets/ember-lazy-resources-demo.js"></script>
+    <script src="{{rootURL}}assets/assets-fingerprint.js"></script>
 
     {{content-for "body-footer"}}
   </body>
